--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="EVM connector"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/TODO.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/binary-code.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
