--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/binary-code.png" />
@@ -9,6 +9,10 @@
       name="description"
       content="EVM connector"
     />
+    <meta property="og:image" content="%PUBLIC_URL%/binary-code.png" />
+    <meta property="og:title" content="Shareable EVM contract dashboards" />
+    <meta property="og:description" content="EVMConnector is a tool for creating shareable contract dashboards on any EVM-based blockchain. No ABI required." />
+    <meta property="og:site_name" content="Lauri Peltonen" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/binary-code.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
