--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta property="og:image" content="%PUBLIC_URL%/binary-code.png" />
     <meta property="og:title" content="Shareable EVM contract dashboards" />
-    <meta property="og:description" content="EVMConnector is a tool for creating shareable contract dashboards on any EVM-based blockchain. No ABI required." />
+    <meta property="og:description" content="EVMConnector is a tool for creating shareable contract dashboards on any EVM-based blockchain. Includes interaction with an arbitrary contract function. No ABI required." />
     <meta property="og:site_name" content="Lauri Peltonen" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/binary-code.png" />
     <!--
